--- a/Proyecto/css/index.css
+++ b/Proyecto/css/index.css
@@ -93,7 +93,9 @@ a:hover {
 /*
     Principal
 */
-
+.svg{
+    z-index: 1;
+}
 main {
     height: 800px;
     background-image: url(../img/mainimg.PNG);
